--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,1 +1,155 @@
 @charset 'UTF-8';
+$blue: #11497c;
+$gray: #dcdcdc;
+$dkgray: #bebebe;
+$black: #444444;
+$whitesmoke: #f5f5f5;
+$orange: #fe7847;
+
+/* --------------------------------
+
+Primary
+
+-------------------------------- */
+
+html {
+    font-size: 13px;
+    line-height: 16px;
+    font-family: 'Lucida Grande',Tahoma,Geneva,Verdana,sans-serif;
+}
+
+body {
+    background: $whitesmoke;
+    color: #727272;
+}
+
+/* --------------------------------
+
+Wrapper
+
+-------------------------------- */
+
+.warning-wrapper {
+    width: 100%;
+    background: $orange;
+    color: white;
+    padding: 12px 0;
+}
+
+.header-wrapper {
+    width: 100%;
+    background: $blue;
+}
+
+.subheader-wrapper {
+    width: 100%;
+    background: $gray;
+    border-bottom: 1px solid $dkgray;
+}
+
+/* --------------------------------
+
+Panel
+
+-------------------------------- */
+
+.panel {
+    border: 0;
+    box-shadow: none;
+
+    .panel-heading {
+    	border-radius: 0;
+    }
+}
+
+.panel-default {
+	.panel-heading {
+		background: $blue;
+		color: white;
+		border-bottom: 0;
+	}
+
+    .panel-body {
+        background: $whitesmoke;
+        border: 0;
+        border-top: solid 4px $blue;
+
+        // &:hover {
+        //     background: #eeeeee;
+        // }
+    }
+
+    .panel-footer {
+    	background: $gray;
+    	border-radius: 0;
+    }
+}
+
+.panel-image {
+    width: 100%;
+}
+
+/* --------------------------------
+
+Other
+
+-------------------------------- */
+
+.icon {
+    margin-right: 5px;
+}
+
+.main {
+    background: white;
+}
+
+
+
+.footer {
+    background: $blue;
+    color: #72a1cf;
+    padding-top: 15px;
+    padding-bottom: 20px;
+
+    a {
+    	color: #72a1cf;
+    }
+
+    p {
+    	color: white;
+    }
+
+    .bethinkinnovate {
+    	padding: 12px;
+    	padding-right: 0;
+    }
+
+    hr {
+    	border-color: #33648f
+    }
+}
+
+.header {
+    color: white;
+
+    .logo {
+        padding: 42px 0 12px 0;
+    }
+
+    a {
+        color: #8cbbdd;
+        font-size: 12px;
+        line-height: 16px;
+    }
+}
+
+.subheader {
+    color: $black;
+    padding: 12px 0 12px;
+    font-weight: bold;
+    font-size: 12px;
+
+    .list-inline {
+        margin-bottom: 0;
+    }
+}
