--- a/sass/app.scss
+++ b/sass/app.scss
@@ -59,29 +59,28 @@ Panel
 
     .panel-heading {
     	border-radius: 0;
+        color: white;
+        border-bottom: 0;
+    }
+
+    .panel-body {
+        background: $whitesmoke;
+        border-top: solid 4px $whitesmoke;
+    }
+
+    .panel-footer {
+        background: $gray;
+        border-radius: 0;
     }
 }
 
 .panel-default {
 	.panel-heading {
 		background: $blue;
-		color: white;
-		border-bottom: 0;
 	}
 
     .panel-body {
-        background: $whitesmoke;
-        border: 0;
-        border-top: solid 4px $blue;
-
-        // &:hover {
-        //     background: #eeeeee;
-        // }
-    }
-
-    .panel-footer {
-    	background: $gray;
-    	border-radius: 0;
+        border-color: $blue;
     }
 }
 
