--- a/css/app.css
+++ b/css/app.css
@@ -101,6 +101,8 @@ Other
   font-size: 12px; }
   .subheader .list-inline {
     margin-bottom: 0; }
+  .subheader .list-left li {
+    padding: 6px 5px; }
   .subheader .language, .subheader .name, .subheader .company {
     text-transform: capitalize; }
 
