--- a/css/app.css
+++ b/css/app.css
@@ -67,8 +67,17 @@ Other
 .icon {
   margin-right: 5px; }
 
+.strong {
+  font-weight: bold; }
+
 .main {
   background: white; }
+
+.results .information {
+  margin-top: 40px;
+  margin-bottom: 40px; }
+.results p:last-child {
+  margin-bottom: 20px; }
 
 .footer {
   background: #11497c;
